# lenovo-throttling-rust

./: Cargo.toml  config.toml
src/: main.rs  msr.rs  power.rs
